# ai-ready-data-agent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  factors.md  pyproject.toml
agent/: audit.py  cli.py  config.py  discovery.py  exceptions.py  pipeline.py  questions_loader.py  questions_registry.yaml  report.py  requirements_registry.yaml  run.py  storage.py  survey.py  thresholds.py
agent/commands/: benchmark.py  init.py
agent/platform/: __init__.py  duckdb_adapter.py  registry.py  snowflake_adapter.py  sqlite_adapter.py
agent/remediation/: __init__.py  generator.py  templates.py
agent/suites/: __init__.py  clean_duckdb.py  clean_snowflake.py  clean_sqlite.py  contextual_snowflake.py  loader.py
agent/ui/: __init__.py  benchmark.py  compare.py  discovery.py  report.py  themes.py
cli/: README.md  __init__.py  cli.py  config.py  constants.py  discovery.py  manifest_loader.py  pipeline.py  requirements_registry.yaml  run.py  survey.py  thresholds.py
coco-skills/: SKILL.md
definitions/: context-sample.yaml  questions.yaml  workflow.yaml
demo/: snowflake-demo-runbook.md
docs/: E2E-from-GitHub.md  architecture-system-map.md  definitions.md  demo-snowflake.md  roadmap.md
factors/: README.md  factor-00-clean.md  factor-01-contextual.md  factor-02-consumable.md  factor-03-current.md  factor-04-correlated.md  factor-05-compliant.md
projects/: .gitignore
scripts/: create_sample_duckdb.py  setup_sample_databases.py  test_connections.txt  verify_setup.py
skills/: README.md  SKILL.md
tests/: __init__.py  test_e2e_assess.py  test_snowflake_adapter.py
(+150 files in other folders)
