[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aird-agent"
version = "0.1.0"
description = "AI-Ready Data assessment CLI and agent package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.0"]

[project.scripts]
aird = "agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
